# lambda-erp-example

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
acme/: __init__.py  plugin.py  sales_invoice.py  swiss_qr.py
acme/pdf_templates/: document.html
docs/: deploying.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: brand.css  dashboard.tsx  main.tsx  plugin.tsx  vite-env.d.ts
