[project]
name = "acme-erp"
version = "0.1.0"
description = "Example customer deployment built on the lambda-erp open-core"
requires-python = ">=3.10"
dependencies = [
    # The published backend core (PyPI). Pulls in FastAPI, the document
    # lifecycle, GL/stock engines, the chat API, weasyprint, etc.
    "lambda-erp==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acme"]
